# KFSpectra

./: .gitignore  LICENSE  README.md  calibration.json  main.py  pyproject.toml  requirements.txt
3D_Printer/: printer_control.py
Processing/: Analyze_cube.py  Generate_HSCube.py  SpectralTools.py
acquisition/: Camera_Control.py  Printer_Control.py  Scan.py
camera/: capture.py
edge/: Scan.py  camera_control.py  config.yaml  main.py  mqtt.py  printer_control.py
printer/: printer_control.py
scanner/: full_scan.py
server/: Analyze_cube.py  Generate_cube.py  save_cube_plots.py
utils/: calibration.py  config.py
